Add user edit and get user API documentation.
