# storage/api-docs/api-docs.json
@@ -364,6 +364,81 @@
                     }
                 }
             }
+        },
+        "/api/v1/user": {
+            "get": {
+                "description": "Get auth user",
+                "operationId": "e60080abfe3a9e87064c5759a9dd06da",
+                "responses": {
+                    "200": {
+                        "description": "User info retrieved successfully"
+                    },
+                    "400": {
+                        "description": "Something went wrong"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                }
+            }
+        },
+        "/api/v1/user/edit": {
+            "put": {
+                "description": "Update user profile",
+                "operationId": "fcb74221892fb8ca9a611d800c1df663",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "first_name",
+                                    "last_name",
+                                    "avatar",
+                                    "is_marketing",
+                                    "address"
+                                ],
+                                "properties": {
+                                    "first_name": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "admin@email.com"
+                                    },
+                                    "last_name": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "123456"
+                                    },
+                                    "avatar": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "123456"
+                                    },
+                                    "is_marketing": {
+                                        "type": "boolean",
+                                        "format": "string",
+                                        "example": "0/1"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "Bangladesh"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Profile updated successfully"
+                    },
+                    "400": {
+                        "description": "Something went wrong"
+                    }
+                }
+            }
         }
     }
 }
